<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/basic_header">
        <!--
        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />-->


        <SwitchPreferenceCompat
            app:key="location"
            app:defaultValue="true"
            app:title="@string/location_title" />

        <!-- TODO: Add default value metric -->
        <ListPreference
            app:entries="@array/units_entries"
            app:entryValues="@array/units_entry_values"
            app:key="distance_units"
            app:title="Distance units"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/adv_header">
        <!--
        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
       -->
    </PreferenceCategory>

</PreferenceScreen>