<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/weather_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layerType="hardware"
        tools:context=".ui.map.WeatherOverlay">

    <androidx.cardview.widget.CardView
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/Transparent"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondaryLightBlueTran">

            <ImageView
                    android:src="@drawable/ic_map_traffic_ice_orange_large"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:id="@+id/weather_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/weather_degrees" />

            <TextView
                    android:text="@string/degrees"
                    android:textColor="@color/secondaryDarkBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weather_degrees"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_icon"
                    app:layout_constraintBottom_toTopOf="@+id/weather_wind" />

            <TextView
                    android:text="@string/m_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryDarkBlue"
                    android:id="@+id/weather_wind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_degrees"
                    app:layout_constraintBottom_toTopOf="@+id/percipation"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:text="@string/mm_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/percipation"
                    android:textColor="@color/secondaryDarkBlue"
                    app:layout_constraintTop_toBottomOf="@+id/weather_wind"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>