<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/routing_selector"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:clickable="true"
        android:layerType="hardware"
        tools:context=".ui.map.RoutingSelector">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/fastest_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            app:cardBackgroundColor="?attr/colorOnSecondary"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fastest_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fastest_route"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.197" />

                <TextView
                        android:id="@+id/fastest_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.045"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fastest_route"
                        app:layout_constraintVertical_bias="0.85"
                        tools:ignore="TextContrastCheck" />

                <TextView
                        android:id="@+id/fastest_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.954"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fastest_route"
                        app:layout_constraintVertical_bias="0.85"
                        tools:ignore="TextContrastCheck" />

                <Button
                        android:id="@+id/fastest_button"
                        android:layout_width="61dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/question_mark"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.954"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="DuplicateSpeakableTextCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/safest_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardBackgroundColor="?attr/colorOnSecondary"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fastest_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/safest_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safest_route"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.197" />

                <TextView
                        android:id="@+id/safest_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.045"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/safest_route"
                        app:layout_constraintVertical_bias="0.85"
                        tools:ignore="TextContrastCheck" />

                <TextView
                        android:id="@+id/safest_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.954"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/safest_route"
                        app:layout_constraintVertical_bias="0.85"
                        tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/safest_button"
                    android:layout_width="61dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/question_mark"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.954"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>