<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layers_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layerType="hardware"
        tools:context=".ui.map.LayersSelector">

    <androidx.cardview.widget.CardView
            android:id="@+id/view"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/off_white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:background="?attr/colorOnPrimary">

            <Switch
                android:id="@+id/switch_airquality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/switch_weather"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:text="@string/air_quality" />

            <Switch
                android:id="@+id/switch_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/switch_bikeRoutes"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/switch_airquality"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:text="@string/weather" />

            <Switch
                android:id="@+id/switch_bikeRoutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/bike_routes"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/switch_weather"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView"
                android:textColor="?attr/colorSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Air Quality"
                app:layout_constraintBottom_toBottomOf="@+id/switch_airquality"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/switch_airquality" />

            <TextView
                android:id="@+id/textView2"
                android:textColor="?attr/colorSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weather"
                app:layout_constraintBottom_toBottomOf="@+id/switch_weather"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/switch_weather" />

            <TextView
                android:id="@+id/textView3"
                android:textColor="?attr/colorSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bike Routes"
                app:layout_constraintBottom_toBottomOf="@+id/switch_bikeRoutes"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/switch_bikeRoutes" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />
            <Spinner
                    android:id="@+id/aq_spinner"
                    android:layout_width="149dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/aq_components"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toEndOf="@+id/switch_airquality"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>